2008-04-11  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_config.erl: Removed a dependency on string:to_upper

	* src/tls/tls_drv.c: Fixed gcc signedness warnings (EJAB-447)
	* src/ejabberd_zlib/ejabberd_zlib_drv.c: Likewise

	* src/expat_erl.c: Removed R9B workaround (EJAB-447)

2008-04-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix identity and database update
	bugfix
	* src/mod_pubsub/nodetree_default.erl: Likewise

2008-04-10  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Uniform default value for empty privacy
	list. Fixes (EJAB-603).

2008-04-08  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl: LDAP function to get the number of
	registered users is too slow (EJAB-331): set timeout in LDAP
	search queries (thanks to Evgeniy Khramtsov) and return the number
	of registered users.

2008-04-07  Mickael Remond  <mremond@process-one.net>

	* doc/guide.tex: Documented the IQ discipline {queue, N}.
	* doc/guide.html: Likewise.

2008-04-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix default_room_opts with default_room_options
	* doc/guide.html: Likewise

2008-04-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth_ldap.erl (get_vh_registered_users_number): New
	function that returns 0 registered users (EJAB-331).

	* src/ejabberd_c2s.erl (process_presence_probe): Don't route a
	presence probe to oneself (EJAB-498)

2008-04-02  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: Add support to include additional
	configuration files. Add support for macro definition and
	usage. (EJAB-593)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-04-02  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: add condition inclusion of pep in
	disco identity (EJAB-564)

	* src/Makefile.in: Do not ignore values passed from configure
	(thanks to Justin Boffemmyer)(EJAB-592)
